--- a/lesson11/timesheet/timesheet-rest/src/main/resources/application.yml
+++ b/lesson11/timesheet/timesheet-rest/src/main/resources/application.yml
@@ -6,7 +6,7 @@ application:
   recover:
     enabled: true
     noRecoverFor:
-      - class
+    - ArithmeticException.class
 server:
   port: 8080
 spring:
